--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,11 @@ spring.jpa.properties.hibernate.default_schema=public
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto =update
+spring.jpa.hibernate.ddl-auto =create
 
 
 logging.level.org.hibernate.SQL= DEBUG
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
